--- a/NTNU GO/app/src/main/res/values/strings.xml
+++ b/NTNU GO/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     //App name
-    <string name="app_name">NTNU mPLE</string>
+    <string name="app_name">NTNU GO</string>
 
     //Main Menu
     <string name="activity_name_main_menu">Main Menu</string>
@@ -44,25 +44,5 @@
 
     <string-array name="todolist_junior">
 
-    </string-array>
-
-
-    <string-array name="course_names">
-        <item>IT2805</item>
-        <item>IT3010</item>
-        <item>IT3020</item>
-        <item>Master</item>
-        <item>IT28205</item>
-        <item>IT30120</item>
-        <item>IT302230</item>
-        <item>Maste324r</item>
-        <item>IT280524</item>
-        <item>IT3010243</item>
-        <item>IT302024</item>
-        <item>Master24</item>
-        <item>IT2802345</item>
-        <item>IT301240</item>
-        <item>IT3020234</item>
-        <item>Maste234r</item>
     </string-array>
 </resources>
